# include-repo

./: .travis.yml  Cargo.toml  README.md
examples/: agpl_compliance.rs  git_pathspec.rs
include-repo-impl/: Cargo.toml
include-repo-impl/src/: lib.rs
src/: lib.rs
