[package]
name = "include-repo"
version = "0.1.0"
authors = ["Euan Kemp <euank@euank.com>"]
license = "AGPL-3.0-only"
description = "This crate implements the 'include_repo!' macro for easy AGPL compliance! Include a tarball as a const in your code!"
homepage = "https://github.com/euank/include-repo"
repository = "https://github.com/euank/include-repo"

[dependencies]
include-repo-impl = "0.1.0"
libflate = "1.1.0"
syn = { version = "1.0.70", features = [ "extra-traits" ]}

[lib]
proc-macro = true
