[package]
name = "include-repo-impl"
version = "0.1.0"
authors = ["Euan Kemp <euank@euank.com>"]
license = "AGPL-3.0-only"
description = "This is the internal impl crate for the include-repo; please do not use this one directly"
homepage = "https://github.com/euank/include-repo"
repository = "https://github.com/euank/include-repo"

[dependencies]
proc-macro-hack = "0.4"
libflate = "0.1"
syn = { version = "0.14", features = ["parsing"] }


[lib]
proc-macro = true
